lib/src/compiler/tests/testdata/errors/19.out
error[E105]: number out of range
 --> line:6:8
  |
6 |     !a[-1]
  |        ^^ this number is out of the allowed range [1-9223372036854775807]
  |